--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 {% endif %}
 
 {% if site.tags != "" %}
-  {% include collecttags.html %}
+  {% include tags.html %}
 {% endif %}
 
 <!-- <header class="site-header" role="banner">
