--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,10 +9,10 @@
 <!--         <a href="https://scholar.google.com/citations?user=dCa-pW8AAAAJ&hl=en&oi=ao" target="_blank">
             <img src="{{ '/assets/images/logo_scholar.png' | relative_url }}" />
         </a> -->
-        <a href="https://github.com/lilianweng" target="_blank">
+        <a href="https://github.com/septimo7" target="_blank">
             <img src="{{ '/assets/images/logo_github.png' | relative_url }}" />
         </a>
-        <a href="https://www.instagram.com/lilianweng/" target="_blank">
+        <a href="https://www.instagram.com//" target="_blank">
             <img src="{{ '/assets/images/logo_instagram.png' | relative_url }}" />
         </a>
     </p>
