--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,24 +1,31 @@
+@import "fonts";
+@import "rouge-github";
+
 @charset "utf-8";
 
 // Define defaults for each variable.
-
-$base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$base-font-family: "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $base-font-size:   16px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
-$base-line-height: 1.5 !default;
+$base-line-height: 1.6 !default;
 
 $spacing-unit:     30px !default;
 
 $text-color:       #111 !default;
 $background-color: #fdfdfd !default;
-$brand-color:      #2a7ae2 !default;
+$brand-color:      #e01f1f !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark:  darken($grey-color, 25%) !default;
 
-$table-text-align: left !default;
+$crimson-color:         #e01f1f;
+$crimson-color-light:   #f9493f;
+$crimson-color-very-light:   lighten($crimson-color, 40%) !default;
+$crimson-color-dark:    #b71212;
+
+$orange-color:          #ff8f26;
 
 // Width of the content area
 $content-width:    800px !default;
@@ -46,6 +53,5 @@ $on-laptop:        800px !default;
 // Import partials.
 @import
   "minima/base",
-  "minima/layout",
-  "minima/syntax-highlighting"
+  "minima/layout"
 ;
