--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,7 +46,7 @@
         <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
 
         <nav class="site-nav">
-            <a class="page-link" href="http://septimo7.github.io" target="_blank">&#x1f349; About</a>
+            <a class="page-link" href="https://septimo7.github.io" target="_blank">&#x1f349; About</a>
         </nav>
 
         <nav class="site-nav">
@@ -56,3 +56,4 @@
     </div>
 
 </header>
+
