--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,6 +1,5 @@
 @import "fonts";
 @import "rouge-github";
-
 @charset "utf-8";
 
 // Define defaults for each variable.
@@ -55,3 +54,5 @@ $on-laptop:        800px !default;
   "minima/base",
   "minima/layout"
 ;
+
+@import "gist"
