--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,7 +43,8 @@
 
     <div class="wrapper">
         {% assign default_paths = site.pages | map: "path" %}
-        <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+        {%- assign page_paths = site.header_pages | default: default_paths -%}
+        <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
 
         <nav class="site-nav">
             <a class="page-link" href="https://septimo7.github.io/about" target="_blank">&#x1f349; About</a>
