--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+<article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
@@ -12,9 +12,13 @@ layout: default
         {{ page.date | date: date_format }}
       </time>
 
-      <span itemprop="author" itemscope itemtype="http://schema.org/Person">
+      {%- if page.author -%}
+        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
+      {%- endif -%}</p>
+
+<!--       <span itemprop="author" itemscope itemtype="http://schema.org/Person">
         by <span itemprop="name">{{ site.author }}</span>
-      </span>
+      </span> -->
 
       <span>
         {% for tag in page.tags %}
