--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
     </main>
 
     {% include footer.html %}
+    <script id="dsq-count-scr" src="//septimo7-github-io.disqus.com/count.js" async></script>
 
   </body>
 
