--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,9 +12,14 @@ layout: default
         {{ page.date | date: date_format }}
       </time>
 
-      {%- if page.author -%}
-        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
-      {%- endif -%}</p>
+      {% if page.author %}
+        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author | escape }}</span></span>
+
+        <a herf="{{ content.absolute_url }}#disqus_thread"> Post a comment</a>
+
+      {% endif %}
+
+    </p>
 
 <!--       <span itemprop="author" itemscope itemtype="http://schema.org/Person">
         by <span itemprop="name">{{ site.author }}</span>
