--- a/_sass/gist.scss
+++ b/_sass/gist.scss
@@ -1,91 +1,45 @@
-/* https://github.com/lonekorean/gist-syntax-themes */
-/*@import url('https://cdn.rawgit.com/lonekorean/gist-syntax-themes/d49b91b3/stylesheets/one-dark.css');*/
-/*@import url('https://cdn.rawgit.com/lonekorean/gist-syntax-themes/d49b91b3/stylesheets/solarized-light.css');*/
-body .gist .highlight {
-    background: #fdf6e3;
+
+@import url('https://fonts.googleapis.com/css?family=Droid+Sans+Mono');
+
+/*body .gist .gist-file {
+    margin-bottom: 0;
+    border: 1px dashed #adb5bd;
+    border-radius: 0;
+}*/
+
+/*body .gist .gist-data {
+    border-bottom: none;
+    border-radius: 0;
+    background-color: #f1f3f5;
+}*/
+
+body .gist .blob-wrapper {
+    border-radius: 0;
 }
-body .gist .blob-num,
-body .gist .blob-code-inner,
-body .gist .pl-s1 .pl-s2,
-body .gist .pl-smi,
-body .gist .pl-smp,
-body .gist .pl-stj,
-body .gist .pl-vo,
-body .gist .pl-vpf {
-    color: #657b83;
+
+/*body .gist .highlight td {
+    padding: 5px 15px !important;
+    line-height: 1;
+    font-family: inherit;
+    font-size: inherit;
+}*/
+
+/*body .gist tr:first-child td {
+    padding-top: 15px !important;
 }
-body .gist .pl-c,
-body .gist .pl-c span {
-    color: #93a1a1;
-    font-style: italic;
-}
-body .gist .pl-mb {
-    color: #2aa198;
-    font-weight: 700;
-}
-body .gist .pl-mh .pl-en {
-    color: #cb4b16;
-    font-weight: 700;
-}
-body .gist .pl-mi {
-    color: #859900;
-    font-style: italic;
-}
-body .gist .pl-c1,
-body .gist .pl-pds,
-body .gist .pl-s1,
-body .gist .pl-s1 .pl-pse .pl-s2,
-body .gist .pl-sv {
-    color: #2aa198;
-}
-body .gist .pl-e,
-body .gist .pl-en,
-body .gist .pl-ent,
-body .gist .pl-s,
-body .gist .pl-v {
-    color: #268bd2;
-}
-body .gist .pl-k,
-body .gist .pl-mdh,
-body .gist .pl-mdr,
-body .gist .pl-ml,
-body .gist .pl-mm,
-body .gist .pl-mo,
-body .gist .pl-mp,
-body .gist .pl-mr,
-body .gist .pl-ms,
-body .gist .pl-s1 .pl-v,
-body .gist .pl-s3 {
-    color: #859900;
-}
-body .gist .pl-mh,
-body .gist .pl-sc,
-body .gist .pl-sr .pl-cce {
-    color: #cb4b16;
-}
-body .gist .pl-mq,
-body .gist .highlight-source-css .pl-k {
-    color: #93a1a1;
-}
-body .gist .pl-sr,
-body .gist .pl-sr .pl-sra,
-body .gist .pl-sr .pl-sre,
-body .gist .pl-src {
-    color: #d30102;
-}
-body .gist .pl-st,
-body .gist .highlight-source-c\+\+ .pl-s {
-    color: #dc322f;
-}
-body .gist .pl-mi1,
-body .gist .pl-mdht {
-    color: #657b83;
-    background: rgba(0, 64, 0, .5);
-}
-body .gist .pl-md,
-body .gist .pl-mdhf,
-body .gist .pl-id,
-body .gist .pl-ii {
-    color: #657b83;
-    background: rgba(64, 0, 0, .5);
-}
+
+body .gist tr:last-child td {
+    padding-bottom: 15px !important;
+}*/
+
+/*body .gist .gist-meta {
+    display: none;
+}*/
+
+/* Better styles for embedding GitHub Gists */
+/*body .gist{font-size:13px;line-height:18px;width:53em}
+body .gist pre{font-family:Menlo,Monaco,'Bitstream Vera Sans Mono','Courier New',monospace !important}
+body .gist-meta{font-family:Arial,sans-serif;font-size:13px !important}
+body .gist-meta a{color:#3b5998 !important;font-weight:bold;text-decoration:none}
+body .gist-meta a:hover{text-decoration:underline}
+*/
