--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div style="clear: both;"/>
 <footer class="site-footer">
-    2018 &copy; Built by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="https://github.com/jekyll/minima/" target="_blank">minima</a> | View <a href="https://github.com/SePTimO7/septimo7.github.io" target="_blank">this</a> on Github
+    2018 &copy; Built by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="https://github.com/jekyll/minima/" target="_blank">minima</a> | View <a href="https://github.com/SePTimO7/septimo7.github.io" target="_blank">this</a> on Github | &#126976; &#126978; &#126977; &#126979; <a href="https://github.com/SePTimO7/septimo7.github.io" target="_blank">&#126980; </a>&#126981;
 
     <p>
         <a href="{{ site.baseurl }}/feed.xml" target="_blank">
@@ -12,8 +12,12 @@
         <a href="https://github.com/septimo7" target="_blank">
             <img src="{{ '/assets/images/logo_github.png' | relative_url }}" />
         </a>
-        <a href="https://www.instagram.com//" target="_blank">
+        <a href="https://www.instagram.com/septimo11/" target="_blank">
             <img src="{{ '/assets/images/logo_instagram.png' | relative_url }}" />
         </a>
+        <a href="https://twitter.com/LIUZhuang2/" target="_blank">
+            <img src="/assets/images/logo_twitter.png" />
+        </a>
     </p>
+
 </footer>
